--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <head>
   <meta charset="UTF-8">
   <!-- add the p5 library here! -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/p5.js"></script>
 
   <!-- add your own sketch.js file here -->
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script src="js/jquery.js" type="text/javascript"></script>
+  <script src="js/raphael.js" type="text/javascript"></script>
+  <script src="init.js" type="text/javascript"></script>
+
 
 
 </head>
 
 <body>
+
+
 </body>
 </html>
